--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,5 +1,14 @@
 <html>
 
+<head>
+  <style>
+    div {
+      color: red;
+    }
+
+  </style>
+</head>
+
 <body>
   <div>hello</div>
   <div>world</div>
