--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,16 +2,20 @@
 
 <head>
   <style>
-    div {
+    #hello {
       color: red;
+    }
+
+    .world {
+      color: green;
     }
 
   </style>
 </head>
 
 <body>
-  <div>hello</div>
-  <div>world</div>
+  <div id="hello" style="background: green">hello</div>
+  <div class="world" style="background: red">world</div>
 </body>
 
 </html>
