--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <div id="hello" style="background: green">hello</div>
-  <div class="world" style="background: red">world</div>
+  <div class="world" style="display: none">world</div>
 </body>
 
 </html>
